--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gh-pages": "^3.1.0",
     "joi": "^13.1.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -22,6 +23,7 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "redux": "^4.1.1",
+    "sweetalert2": "^11.1.5",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
